tests/testcases/invalid/02_unknown_escape_in_string.ciel
int main() {
    char s[] = "Bad\qEscape";
    return 0;
}
